--- a/lista.html
+++ b/lista.html
@@ -4,52 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listák</title>
+    <title>gyümölcsök</title>
 </head>
 <body>
     
 </body>
 </html>
-<ul type="square">
-    <li>pump shotgun</li>
-    <li>Scar-l</li>
-    <li>Heavy Sniper</li>
-</ul>
-
-
-
-
-
-
-
-
 <ol>
     <li>
         <ol>
-            <li>Ferencváros</li>
-            <li>újpesti dózsa</li>
-            <li>nagyatád fc</li>
+            <ul type="I">
+            <li>alma</li>
+            <li>maracuja</li>
+            <li>narancs</li>
+            <li>kókusz</li>
+            <li>eper</li>
         </ol>
     </li>
     <li>
         <ol>
-            <li>Ferencváros</li>
-            <li>újpesti dózsa</li>
-            <li>nagyatád fc</li>
+            <ul type="I">
+            <li>pomelo</li>
+            <li>sárkánygyönölcs</li>
+            <li>mandarin</li>
+            <li>cseresznye</li>
+            <li>Ananász</li>
         </ol>
     </li>
     <li>
         <ol>
-            <li>Ferencváros</li>
-            <li>újpesti dózsa</li>
-            <li>nagyatád fc</li>
+            <ul type="I">
+            <li>mangón</li>
+            <li>kókusz</li>
+            <li>körte</li>
+            <li>banán</li>
+            <li>licsi</li>
         </ol>
     </li>
 </ol>
+	
+Válasz
+Továbbítás
 
-<dl>
-    <dt>Jancsi</dt>
-    <dd>Kicsi a zacsi</dd>
-    <dt>Zsolt</dt>
-    <dd>kicsi a jancsi</dd>
-</dl>
