--- a/erettsegi/Paprika/Index.html
+++ b/erettsegi/Paprika/Index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paprika</title>
+
+    <style>
+        table,td
+        {
+            border: 1px solid black
+        }
+    </style>
 </head>
 <body style="background-color: #FFEFD5; color: #8B4513 ;">
     <h1><img src="szines.jpg" style="border:1px solid black; margin: 0 10px;">Ismered a legcsípősebbet?</h1>
@@ -22,12 +29,12 @@
  <h2>Csípősség</h2>
  <p>A paprika csípősségének (kapszaicin tartalmának) mértékegysége a Scoville egység. Értéke 0 (édes) és 300 000 (ehetetlenül csípős) egység között változik. Egy paprika Scoville értéke azt az arányt mutatja, amely megadja, hogy a minta csípőssége milyen arányú hígításban nem érezhető már.</p>
 
-<table>
-    <tr><td>Paprika</td><td>Csípősség (Scoville érték)</td></tr>
-    <tr><td>zöldpaprika</td><td></td> 0</td></tr>
-    <tr><td>a kevésbé csípős hazai paprikák</td><td></td> 500-1000</td></tr>
-    <tr><td>csípős paprikák </td><td>1500-2500</td></tr>
-    <tr><td>a mexikói Serrano chili</td><td>5000-20000</td></tr>
+<table style="width:300px; margin:auto;">
+    <tr><td>Paprika</td><td style="width:120px;">Csípősség (Scoville érték)</td></tr>
+    <tr><td>zöldpaprika</td><td style="background-color:chartreuse;"> 0</td></tr>
+    <tr><td>a kevésbé csípős hazai paprikák</td><td style="background-color:rgb(238, 197, 121);"> 500-1000</td></tr>
+    <tr><td>csípős paprikák</td><td style="background-color:rgb(187, 128, 80);"> 1500-2500</td></tr>
+    <tr><td>a mexikói Serrano chili</td><td style="background-color:rgb(209, 127, 189);"> 5000-20000</td></tr>
 </table>
 
 </body>
